--- a/README
+++ b/README
@@ -1,94 +1,183 @@
-# 🚗 Proyecto de Preprocesamiento de Datos para Data Science: Dataset de Coches BMW
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Proyecto de Preprocesamiento de Datos para Data Science: Dataset de Coches BMW</title>
+</head>
+<body>
 
-## 📄 Descripción del Proyecto
+<h1>🚗 Proyecto de Preprocesamiento de Datos para Data Science: Dataset de Coches BMW</h1>
 
-Este proyecto tiene como objetivo realizar el preprocesamiento de datos sobre un dataset de coches BMW. El objetivo final es preparar los datos para predecir el precio del vehículo, aunque en esta fase no se realizará la predicción. 
+<h2>📄 Descripción del Proyecto</h2>
 
-## 📚 Índice de contenidos
+<p>Este proyecto tiene como objetivo realizar el preprocesamiento de datos sobre un dataset de coches BMW. El objetivo final es preparar los datos para predecir el precio del vehículo, aunque en esta fase no se realizará la predicción.</p>
 
-1. 📝 Trabajo Previo
-   - 📦 Importación de librerías
-   - 📂 Carga de datasets
-   - 🗂️ Estructura de Datos
-   - 🔍 Detección de Nulos
-     - 🛠️ Funciones
-     - 📊 Criterios
-     - 📉 Nulos con relevancia baja
-     - 📈 Nulos con relevancia alta
-     - ⚖️ Nulos con relevancia media
-   - 🔄 Valores Duplicados
-   - 📊 Análisis univariable
-     - 🔢 Valores únicos
-     - 🗓️ Fechas
-     - 📈 Histogramas
-2. 🛠️ Preprocesamiento
-   - 🔗 Correlaciones
-3. 📉 Matriz de Correlación
-   - 🎯 Análisis del Target
-   - ⚖️ Simetría
-   - 🔍 Análisis entre el Target y las Variables Independientes
-4. 🗃️ Categorización de columnas
-   - 🛠️ Funciones
-   - 📝 Modificaciones en los tipos de datos
-5. 🔢 Codificación OneHot
-   - ❓ ¿Cómo Funciona?
-   - 📈 Importancia
-   - 🔍 Segunda comprobación de correlaciones
-6. 📋 Conclusiones del dataset
-7. 🛠️ Herramientas para documentar en Word
-   - ❌ Filas eliminadas
+<h2>📚 Índice de contenidos</h2>
 
-## 🗂️ Estructura del Proyecto
+<ol>
+    <li>📝 Trabajo Previo
+        <ul>
+            <li>📦 Importación de librerías</li>
+            <li>📂 Carga de datasets</li>
+            <li>🗂️ Estructura de Datos</li>
+            <li>🔍 Detección de Nulos
+                <ul>
+                    <li>🛠️ Funciones</li>
+                    <li>📊 Criterios</li>
+                    <li>📉 Nulos con relevancia baja</li>
+                    <li>📈 Nulos con relevancia alta</li>
+                    <li>⚖️ Nulos con relevancia media</li>
+                </ul>
+            </li>
+            <li>🔄 Valores Duplicados</li>
+            <li>📊 Análisis univariable
+                <ul>
+                    <li>🔢 Valores únicos</li>
+                    <li>🗓️ Fechas</li>
+                    <li>📈 Histogramas</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+    <li>🛠️ Preprocesamiento
+        <ul>
+            <li>🔗 Correlaciones</li>
+        </ul>
+    </li>
+    <li>📉 Matriz de Correlación
+        <ul>
+            <li>🎯 Análisis del Target</li>
+            <li>⚖️ Simetría</li>
+            <li>🔍 Análisis entre el Target y las Variables Independientes</li>
+        </ul>
+    </li>
+    <li>🗃️ Categorización de columnas
+        <ul>
+            <li>🛠️ Funciones</li>
+            <li>📝 Modificaciones en los tipos de datos</li>
+        </ul>
+    </li>
+    <li>🔢 Codificación OneHot
+        <ul>
+            <li>❓ ¿Cómo Funciona?</li>
+            <li>📈 Importancia</li>
+            <li>🔍 Segunda comprobación de correlaciones</li>
+        </ul>
+    </li>
+    <li>📋 Conclusiones del dataset</li>
+    <li>🛠️ Herramientas para documentar en Word
+        <ul>
+            <li>❌ Filas eliminadas</li>
+        </ul>
+    </li>
+</ol>
 
-El proyecto está estructurado en varias secciones, cada una enfocada en un aspecto específico del preprocesamiento de datos. 
+<h2>🗂️ Estructura del Proyecto</h2>
 
-1. **🗑️ Eliminación de Columnas**
-   - Se identificaron y eliminaron columnas irrelevantes para el análisis.
-2. **🧹 Manejo de Valores Nulos**
-   - Se trató y limpió las columnas con valores nulos.
-3. **📊 Análisis Univariable**
-   - Se realizó un análisis univariable para detectar outliers y posibles agrupaciones.
-4. **🔗 Análisis de Correlación Inicial**
-   - Se realizó un análisis de correlación inicial para identificar variables correlacionadas.
-5. **🔍 Análisis Variable vs Target**
-   - Se analizó la relación entre las variables y el target (precio del vehículo) para identificar insights interesantes.
-6. **🔢 Transformación de Categóricas a Numéricas**
-   - Se transformaron las variables categóricas a numéricas utilizando técnicas adecuadas.
-7. **⚖️ Normalización de Variables Numéricas**
-   - Se normalizaron las variables numéricas.
-8. **🔗 Análisis de Correlación Final**
-   - Se realizó un análisis de correlación final para observar los cambios después del preprocesamiento.
-9. **📋 Dataset Limpio y Preprocesado**
-   - Se presentó la lista completa de columnas del dataset limpio y preprocesado, incluyendo el tipo de dato de cada columna y un pantallazo de las primeras 5 líneas.
+<p>El proyecto está estructurado en varias secciones, cada una enfocada en un aspecto específico del preprocesamiento de datos.</p>
 
-## 📁 Estructura de Carpetas
+<ol>
+    <li><strong>🗑️ Eliminación de Columnas</strong>
+        <ul>
+            <li>Se identificaron y eliminaron columnas irrelevantes para el análisis.</li>
+        </ul>
+    </li>
+    <li><strong>🧹 Manejo de Valores Nulos</strong>
+        <ul>
+            <li>Se trató y limpió las columnas con valores nulos.</li>
+        </ul>
+    </li>
+    <li><strong>📊 Análisis Univariable</strong>
+        <ul>
+            <li>Se realizó un análisis univariable para detectar outliers y posibles agrupaciones.</li>
+        </ul>
+    </li>
+    <li><strong>🔗 Análisis de Correlación Inicial</strong>
+        <ul>
+            <li>Se realizó un análisis de correlación inicial para identificar variables correlacionadas.</li>
+        </ul>
+    </li>
+    <li><strong>🔍 Análisis Variable vs Target</strong>
+        <ul>
+            <li>Se analizó la relación entre las variables y el target (precio del vehículo) para identificar insights interesantes.</li>
+        </ul>
+    </li>
+    <li><strong>🔢 Transformación de Categóricas a Numéricas</strong>
+        <ul>
+            <li>Se transformaron las variables categóricas a numéricas utilizando técnicas adecuadas.</li>
+        </ul>
+    </li>
+    <li><strong>⚖️ Normalización de Variables Numéricas</strong>
+        <ul>
+            <li>Se normalizaron las variables numéricas.</li>
+        </ul>
+    </li>
+    <li><strong>🔗 Análisis de Correlación Final</strong>
+        <ul>
+            <li>Se realizó un análisis de correlación final para observar los cambios después del preprocesamiento.</li>
+        </ul>
+    </li>
+    <li><strong>📋 Dataset Limpio y Preprocesado</strong>
+        <ul>
+            <li>Se presentó la lista completa de columnas del dataset limpio y preprocesado, incluyendo el tipo de dato de cada columna y un pantallazo de las primeras 5 líneas.</li>
+        </ul>
+    </li>
+</ol>
 
-- **datasets/**: Contiene el dataset de coches BMW.
-  - `BMW_dataset.csv`
-- **PDFs/**: Contiene el documento PDF solicitado por el profesor.
-  - `Entregable_BMW.pdf`
-- **src/**: Contiene el código fuente del proyecto.
-  - `preprocessing.py`
-- **notebooks/**: Contiene los notebooks utilizados durante el desarrollo del proyecto.
-  - `preprocessing.ipynb`
-- **outputs/**: Contiene los resultados y outputs generados durante el preprocesamiento.
-  - `correlation_matrix_initial.png`
-  - `correlation_matrix_final.png`
-  - `outliers_analysis.png`
+<h2>📁 Estructura de Carpetas</h2>
 
-## 🔧 Requisitos
+<ul>
+    <li><strong>datasets/</strong>: Contiene el dataset de coches BMW.
+        <ul>
+            <li><code>BMW_dataset.csv</code></li>
+        </ul>
+    </li>
+    <li><strong>PDFs/</strong>: Contiene el documento PDF solicitado por el profesor.
+        <ul>
+            <li><code>Entregable_BMW.pdf</code></li>
+        </ul>
+    </li>
+    <li><strong>src/</strong>: Contiene el código fuente del proyecto.
+        <ul>
+            <li><code>preprocessing.py</code></li>
+        </ul>
+    </li>
+    <li><strong>notebooks/</strong>: Contiene los notebooks utilizados durante el desarrollo del proyecto.
+        <ul>
+            <li><code>preprocessing.ipynb</code></li>
+        </ul>
+    </li>
+    <li><strong>outputs/</strong>: Contiene los resultados y outputs generados durante el preprocesamiento.
+        <ul>
+            <li><code>correlation_matrix_initial.png</code></li>
+            <li><code>correlation_matrix_final.png</code></li>
+            <li><code>outliers_analysis.png</code></li>
+        </ul>
+    </li>
+</ul>
 
-- Python 3.x
-- Librerías:
-  - pandas
-  - numpy
-  - matplotlib
-  - seaborn
-  - scikit-learn
+<h2>🔧 Requisitos</h2>
 
-## 🚀 Instrucciones
+<ul>
+    <li>Python 3.x</li>
+    <li>Librerías:
+        <ul>
+            <li>pandas</li>
+            <li>numpy</li>
+            <li>matplotlib</li>
+            <li>seaborn</li>
+            <li>scikit-learn</li>
+        </ul>
+    </li>
+</ul>
 
-1. Clonar el repositorio.
-   ```sh
-   git clone [<URL>](https://github.com/JuanMi-CG/NuclioSchool_Entregable_1_Preprocesamiento.git)
-   ```
+<h2>🚀 Instrucciones</h2>
+
+<ol>
+    <li>Clonar el repositorio.
+        <pre><code>git clone <a href="https://github.com/JuanMi-CG/NuclioSchool_Entregable_1_Preprocesamiento.git">https://github.com/JuanMi-CG/NuclioSchool_Entregable_1_Preprocesamiento.git</a></code></pre>
+    </li>
+</ol>
+
+</body>
+</html>
